# Autonomous-sweeper-prototype

./: .gitignore  README  README~
DomotiqueManager/: package.json  readme.md  settings.json
DomotiqueManager/.meteor/: .id  packages  versions
DomotiqueManager/client/: main.html  (+1 more)
Robot/: DemarrageAvecBouton.py  DemarrerAvecBouton.py  DemarrerEtFermerAvecBouton  DemarrerEtFermerAvecBouton.conf  DemarrerEtFermerAvecBouton.py  DemarrerEtFermerAvecBoutons.py  FermerAvecBouton.py  TestDonnees.js  makefile
Robot/Serial_wjwwood/: CMakeLists.txt  Serial_wjwwood.vcxproj  Serial_wjwwood.vcxproj.filters
balayeuse/: Carte.cpp  Carte.h  Carte.txt  CloudPointContainer.cpp  CloudPointContainer.h  Config.cpp  Config.h  Convertisseur.cpp  Convertisseur.h  Decodeur.cpp  Decodeur.h  Main.cpp  Matrices.cpp  Matrices.h  Mutex.cpp  Mutex.h  MyFreenectDevice.cpp  MyFreenectDevice.h  Points.txt  Robot.config  SceneCamera.cpp  SceneCamera.h  Vectors.h  balayeuse.cbp  balayeuse.cbp.mak  balayeuse.cscope_file_list  balayeuse.depend  balayeuse.layout  cbp2make  cpp_pc_view.cpp  libfreenect.hpp  linreg.cpp  linreg.h  makefile
dataDummy/: index.js  simulation.js
freenect/: freenect.cbp
lib/: Segment.h
mongoWrapper/: MongoCommand.cpp  MongoCommandListener.cpp  MongoJob.cpp  MongoWorker.cpp  MongoWrapper.cpp  makefile  mythread.cpp  segment.cpp  thread.cpp  thread.h  wqueue.cpp
mongoWrapperTest/: MongoCommand.cpp  MongoCommandListener.cpp  MongoJob.cpp  MongoWorker.cpp  MongoWrapper.cpp  main.cpp  makefile  mythread.cpp  segment.cpp  testmongo  wqueue.cpp (5).tar
robot/: Robot.sln
(+116 files in other folders)
